<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddFoodActivity">


    <TextView
        android:id="@+id/txt_name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:background="@color/main"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_food_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/edt_background"
        android:hint="@string/meal_name"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@id/edt_food_products"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_name" />

    <EditText
        android:id="@+id/edt_food_products"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/edt_background"
        android:gravity="start"
        android:hint="@string/necessary_ingredients"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@id/edt_preparation_order"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_food_name" />

    <EditText
        android:id="@+id/edt_preparation_order"
        android:layout_width="match_parent"
        android:layout_height="0.dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/edt_background"
        android:gravity="start"
        android:hint="@string/preparation_order"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@id/btn_save"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_food_products" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/main"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_preparation_order" />

</androidx.constraintlayout.widget.ConstraintLayout>