<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutFoodActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/app_name"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@color/main"
            android:textColor="@color/white"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/necessary_ingredients"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/txt_food_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_margin="10dp"/>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preparation_order"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/txt_preparation_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_margin="10dp"/>

    </LinearLayout>

</ScrollView>